--- a/webpack_learn/src/index.html
+++ b/webpack_learn/src/index.html
@@ -6,9 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <!-- <script src="./js/main.js"></script> -->
-    <script src="../dist/buddle.js"></script>
+    <!-- <script src="../dist/buddle.js"></script> -->
+    <script src="../dist/main.js"></script>
+    <script src="../dist/main.bundle.js"></script>
 
     <!-- 不推荐在这里直接引用包和任何css文件 -->
+    <!-- 直接使用main.js来 -->
+
+    <!-- css -->
+    <!-- 这样会直接发起二次请求  通过main.js来调试 -->
+    <!-- <link rel="stylesheet" href="./css/index.css"> -->
 </head>
 <body>
     <ul>
