--- a/webpack-default/src/index.html
+++ b/webpack-default/src/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="../dist/main.js"></script>
+    <!-- 运行npm run dev 的注释 -->
+    <!-- <script src="../dist/bundle.js"></script> -->
 </head>
 <body>
-    
+    <!-- <div id="box"></div> -->
+
+    <!-- 使用字体样式 去main.js中引入 -->
+    <!-- <span class="glyphicon glyphicon-search" aria-hidden="true">字体样式</span> -->
+
+    <!-- vue的 -->
+    <div id="app">
+        <h1>显示不出来？？</h1>
+        <p>这里{{msg}}</p>
+    </div>
 </body>
 </html>
