--- a/webpack-default/src/index.html
+++ b/webpack-default/src/index.html
@@ -18,6 +18,9 @@
     <div id="app">
         <h1>显示不出来？？</h1>
         <p>这里{{msg}}</p>
+        
+        <!-- 注册的登录组件 -->
+        <login></login>
     </div>
 </body>
 </html>
