项目初级完善

--- a/webpack-default/src/index.html
+++ b/webpack-default/src/index.html
@@ -21,6 +21,15 @@
         
         <!-- 注册的登录组件 -->
         <login></login>
+
+        <!-- router组件 -->
+        <!-- <router-link to="/account">account</router-link>
+        <router-link to="/goodslist">goodslist</router-link>
+
+        <router-view></router-view> -->
     </div>
+
+
+
 </body>
 </html>
